Quick-fix for layout on mobile, also remove AutoComplete from Pattern list.

--- a/client/src/Riveter.css
+++ b/client/src/Riveter.css
@@ -12,3 +12,9 @@ body {
   flex-direction: row;
   justify-content: space-between;
 }
+
+@media (max-width: 750px) {
+  .content {
+    flex-direction: column;
+  }
+}
